--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/icone.svg">
     <title>Portal Covid</title>
-    <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/a5ad30f95d.js" crossorigin="anonymous"></script>
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="../static/bootstrap-5.1.3-dist/css/bootstrap.css">
     <!--Css-->
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="../static/styles/styles.css">
 </head>
 <body>
   <!--Cabeçalho-->
@@ -20,7 +19,7 @@
         <div id="navbar" class="navbar navbar-dark bg-rgb(14, 125, 221) shadow-sm">
           <div class="container">
             <a href="#" class="navbar-brand d-flex align-items-center">
-               <img src="./img/virus.svg" width="50" height="50" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"></img>
+               <img src="../static/virus.svg" width="50" height="50" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"></img>
                <strong><h1>Portal Covid</h1></strong>
             </a>
             <nav class="nav">
@@ -53,25 +52,25 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="carousel-img d-block w-100" src="./img/covid-news-7.png" alt="Third slide">
+                  <img class="carousel-img d-block w-100" src="../static/img/covid-news-7.png" alt="Third slide">
                   <div class="carousel-caption d-none d-md-block">
-                    <a href="./Notícias/news-7.html" class="carousel-ancor">
+                    <a href="./Notícias/7" class="carousel-ancor">
                       <h5>Zé Gotinha responde às dúvidas da população sobre a vacinação de crianças contra a Covid-19</h5>
                     </a>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="carousel-img d-block w-100" src="./img/covid-news-8.jpg" alt="Second slide">
+                  <img class="carousel-img d-block w-100" src="../static/img/covid-news-8.jpg" alt="Second slide">
                   <div class="carousel-caption d-none d-md-block td-none">
-                    <a href="./Notícias/news-8.html" class="carousel-ancor">
+                    <a href="./Notícias/8" class="carousel-ancor">
                       <h5>Queiroga pede para que pais levem seus filhos para vacinar contra covid-19</h5>
                     </a>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="carousel-img d-block w-100" src="./img/covid-news-9.webp" alt="First slide">
+                  <img class="carousel-img d-block w-100" src="../static/img/covid-news-9.webp" alt="First slide">
                   <div class="carousel-caption d-none d-md-block">
-                    <a href="./Notícias/news-9.html" class="carousel-ancor">
+                    <a href="./Notícias/9" class="carousel-ancor">
                         <h5>Estado do Rio volta à bandeira amarela de risco para covid-19 Rio volta à bandeira amarela de risco para covid-19</h5>
                     </a>
                   </div>
@@ -100,24 +99,24 @@
             <h2 class="titulo my-5 ms-5">Principais</h2>
             <div class="d-flex m-auto">
                 <div class="card me-5" style="width: 18rem;">
-                    <img class="card-img-top" src="./img/covid-news-1.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="../static/img/covid-news-1.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Covid-19: Brasil tem a maior média móvel de mortes em seis meses</h5>
                         <a href="./Noticias/1" class="btn btn-primary">Veja</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="./img/covid-news-2jpg.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="../static/img/covid-news-2jpg.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Como estão as vacinas da Covid-19 específicas para a variante Ômicron</h5>
-                        <a href="./Notícias/news-2.html" class="btn btn-primary">Veja</a>
+                        <a href="./Notícias/2" class="btn btn-primary">Veja</a>
                     </div>
                 </div>
                 <div class="card ms-5" style="width: 18rem;">
-                    <img class="card-img-top" src="./img/covid-news-3.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="/static/img/covid-news-3.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Araraquara tem 2 mortes por Covid-19 e soma 655 óbitos; mais 365 casos são registrados</h5>
-                        <a href="./Notícias/news-3.html" class="btn btn-primary">Veja</a>
+                        <a href="./Notícias/3" class="btn btn-primary">Veja</a>
                     </div>
                 </div>
             </div>
@@ -127,24 +126,24 @@
             <h2 class="titulo my-5">Recentes</h2>
             <div class="d-flex m-auto">
                 <div class="card me-5" style="width: 18rem;">
-                    <img class="card-img-top" src="./img/covid-news-4.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="/static/img/covid-news-4.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Covid-19: Maioria dos estados não apresentam crescimento na média de casos</h5>
-                        <a href="./Notícias/news-4.html" class="btn btn-primary">Veja</a>
+                        <a href="./Notícias/4" class="btn btn-primary">Veja</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="./img/covid-news-5.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="/static/img/covid-news-5.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Covid-19: De onde poderá vir a próxima variante? Estudo aponta países prováveis</h5>
-                        <a href="./Notícias/news-5.html" class="btn btn-primary">Veja</a>
+                        <a href="./Notícias/5" class="btn btn-primary">Veja</a>
                     </div>
                 </div>
                 <div class="card ms-5" style="width: 18rem;">
-                    <img class="card-img-top" src="./img/covid-news-6.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="/static/img/covid-news-6.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Ministério da Saúde decide não recomendar 4ª dose de vacina contra a Covid-19</h5>
-                        <a href="./Notícias/news-6.html" class="btn btn-primary">Veja</a>
+                        <a href="./Notícias/6" class="btn btn-primary">Veja</a>
                     </div>
                 </div>
             </div>        
@@ -186,6 +185,6 @@
     </footer>
     <!--scripts do projeto-->
     <script src="javascript/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="../static/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
