--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/icone.svg">
+    <link rel="icon" href="/static/img/icone.svg">
     <title>Portal Covid</title>
     <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/a5ad30f95d.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <div id="navbar" class="navbar navbar-dark bg-rgb(14, 125, 221) shadow-sm">
           <div class="container">
             <a href="#" class="navbar-brand d-flex align-items-center">
-               <img src="../static/virus.svg" width="50" height="50" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"></img>
+               <img src="/static/img/virus.svg" width="50" height="50" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"></img>
                <strong><h1>Portal Covid</h1></strong>
             </a>
             <nav class="nav">
