--- a/templates/Noticias/news-1.html
+++ b/templates/Noticias/news-1.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid-19: Brasil tem a maior média móvel de mortes em seis meses</title>
-    <link rel="icon" href="../img/icone.svg">
-    <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="icon" href="../static/img/icone.svg">
     <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/a5ad30f95d.js" crossorigin="anonymous"></script>
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="/static/bootstrap-5.1.3-dist/css/bootstrap.css">
     <!--Css-->
-    <link rel="stylesheet" href="../styles/styles-news.css">
+    <link rel="stylesheet" href="/static/styles/styles-news.css">
 </head>
     <body>
         <!--Navbar-->
@@ -20,7 +19,7 @@
             <div id="navbar" class="navbar navbar-dark bg-rgb(14, 125, 221) shadow-sm">
               <div class="container">
                 <a href="#" class="navbar-brand d-flex align-items-center">
-                   <img src="../img/virus.svg" width="50" height="50" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"></img>
+                   <img src="/static/img/virus.svg" width="50" height="50" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"></img>
                    <strong><h1>Portal Covid</h1></strong>
                 </a>
                 <nav class="nav">
@@ -35,7 +34,7 @@
                 <div class="conteúdo d-flex flex-column">
                     <h1>Covid-19: Brasil tem a maior média móvel de mortes em seis meses</h1>
                     <div >
-                        <img class=" w-100" src="../img/covid-news-1.jpg" alt="" srcset="">
+                        <img class=" w-100" src="/static/img/covid-news-1.jpg" alt="" srcset="">
                         <p class="font-weight-bold fs-4">O Brasil registrou 892 mortes por covid-19 nas últimas 24 horas, segundo o levantamento do consórcio de veículos de imprensa feito junto às secretarias estaduais de Saúde do país, neste sábado (12). Com isso, o total de óbitos pelo novo coronavírus subiu para 638.124.
                         A média móvel de mortes nos últimos sete dias é de 894 por dia – a maior registrada até hoje.</p>
 
@@ -44,7 +43,7 @@
                         Os dados divulgados pelo consórcio de imprensa foram obtidos após uma parceria inédita entre “g1”, “O Globo”, “Extra”, “O Estado de S.Paulo”, “Folha de S.Paulo” e “UOL”, que passaram a trabalhar de forma colaborativa desde o dia 8 de junho de 2020 para reunir as informações necessárias nos 26 Estados e no Distrito Federal.
                         </p>
                         <p class="font-weight-bold fs-4 my-5"> Compartilhar
-                            <a href="#"><img src="../img/share.svg" height="30" width="30" class="m-left"></a>
+                            <a href="#"><img src="/static/img/share.svg" height="30" width="30" class="m-left"></a>
                         </p>
                     </div>
                 </div>
@@ -71,9 +70,6 @@
             </div>
         </footer>
         <!--scripts do projeto-->
-        <script src="javascript/main.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="/static/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
