--- a/templates/Noticias/news-1.html
+++ b/templates/Noticias/news-1.html
@@ -23,7 +23,7 @@
                    <strong><h1>Portal Covid</h1></strong>
                 </a>
                 <nav class="nav">
-                    <a class="nav-link active text-white fs-5" href="../index.html">Home</a>
+                    <a class="nav-link active text-white fs-5" href="./">Home</a>
                 </nav>
               </div>
             </div>
