--- a/templates/Noticias/news-8.html
+++ b/templates/Noticias/news-8.html
@@ -12,7 +12,7 @@
     <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/a5ad30f95d.js" crossorigin="anonymous"></script>
     <!--Css-->
-    <link rel="stylesheet" href="../styles/styles-news.css">
+    <link rel="stylesheet" href="/static/styles/styles-news.css">
 </head>
     <body>
         <!--Navbar-->
