--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,7 +32,7 @@
         </div>
       </header>
       <main>
-          <!--Carousel-->
+        <!--Carousel-->
         <div id="carouselExampleControls" class="carousel slide w-50 m-auto my-5" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -102,7 +103,7 @@
                     <img class="card-img-top" src="../static/img/covid-news-1.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Covid-19: Brasil tem a maior média móvel de mortes em seis meses</h5>
-                        <a href="./Noticias/1" class="btn btn-primary">Veja</a>
+                        <a href="{{url_for('Listas_de_paginas',id=Paginas.get.id())}}" class="btn btn-primary">Veja</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
