--- a/templates/exibir_pagina.html
+++ b/templates/exibir_pagina.html
@@ -1,17 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="PT-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Covid-19: Brasil tem a maior média móvel de mortes em seis meses</title>
-    <link rel="icon" href="../static/img/icone.svg">
-    <!--Fontawesome-->
-    <script src="https://kit.fontawesome.com/a5ad30f95d.js" crossorigin="anonymous"></script>
-    <!--Bootstrap-->
-    <link rel="stylesheet" href="/static/bootstrap-5.1.3-dist/css/bootstrap.css">
-    <!--Css-->
-    <link rel="stylesheet" href="/static/styles/styles-news.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Covid-19: Brasil tem a maior média móvel de mortes em seis meses</title>
+        <link rel="icon" href="../static/img/icone.svg">
+        <!--Fontawesome-->
+        <script src="https://kit.fontawesome.com/a5ad30f95d.js" crossorigin="anonymous"></script>
+        <!--Bootstrap-->
+        <link rel="stylesheet" href="/static/bootstrap-5.1.3-dist/css/bootstrap.css">
+        <!--Css-->
+        <link rel="stylesheet" href="/static/styles/styles-news.css">
 </head>
 <body>
     <!--Navbar-->
@@ -29,14 +30,13 @@
         </div>
     </header>
     <!--Corpo principal-->
-        {% for Paginas in Paginas %}
-        <main>
-            <div class="main-container w-50 m-auto my-5">
-                <div class="conteúdo d-flex flex-column">
-                    <h1>{{Paginas.get.titulo()}}</h1>
-                    <div >
-                        <img class=" w-100" src="{{Paginas.get.img()}}" alt="" srcset="">
-                        <p class="font-weight-bold fs-4">{{Paginas.get.conteudo()}}</p>
+    <main>
+        <div class="main-container w-50 m-auto my-5">
+            <div class="conteúdo d-flex flex-column">
+                <h1>{{pagina.get_titulo()}}</h1>
+                <div >
+                        <img class=" w-100" src="{{pagina.get_imagem()}}" alt="" srcset="">
+                        <p class="font-weight-bold fs-4">{{pagina.get_conteudo()}}</p>
                         <p class="font-weight-bold fs-4">De acordo com o balanço deste sábado, o número de novos casos conhecidos de covid-19 de ontem pra hoje foi de 132.935, elevando o total de infectados para 27.424.975.
                         A média móvel de casos do novo coronavírus nos últimos sete dias foi de 136.138 por dia, um recuo de 27% em relação aos casos registrados em 14 dias, apontando tendência de queda nos diagnósticos da doença.
                         Os dados divulgados pelo consórcio de imprensa foram obtidos após uma parceria inédita entre “g1”, “O Globo”, “Extra”, “O Estado de S.Paulo”, “Folha de S.Paulo” e “UOL”, que passaram a trabalhar de forma colaborativa desde o dia 8 de junho de 2020 para reunir as informações necessárias nos 26 Estados e no Distrito Federal.
@@ -48,7 +48,6 @@
                 </div>
             </div>
         </main>
-        {% endfor %}
         <!--Footer-->
         <footer id="myFooter" class="footer my-5">
             <div class="footer-social">
@@ -72,4 +71,5 @@
         <!--scripts do projeto-->
         <script src="/static/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
     </body>
-</html>
+    </html>
+    
