--- a/templates/Noticias/news-4.html
+++ b/templates/Noticias/news-4.html
@@ -36,14 +36,7 @@
                     <h1>Covid-19: Brasil tem a maior média móvel de mortes em seis meses</h1>
                     <div >
                         <img class=" w-100" src="../img/covid-news-4.jpg" alt="" srcset="">
-                        <p class="font-weight-bold fs-4">Dados divulgados pelo Ministério da Saúde neste sábado (12) apontaram que o número de novos casos voltou a diminuir na maioria dos estados do país. Dentre os 26 estados mais o Distrito Federal, 14 apresentaram queda nas suas médias móveis de infecções e oito se mantiveram estáveis. 
-                        <p class="font-weight-bold fs-4">Rio de Janeiro, Minas Gerais, Espírito Santo, Mato Grosso, Rio Grande do Sul, Santa Catarina, Paraná, Amapá, Roraima, Tocantins, Amazonas, Ceará, Rio Grande do Norte e o Distrito Federal registraram índices pelo menos 15% menores em relação há duas semanas.
-                        </p>
-                        <p class="font-weight-bold fs-4">Ao mesmo tempo, o número médio de infecções em São Paulo, Goiás, Mato Grosso do Sul, Rondônia, Acre, Bahia, Maranhão e Pernambuco permaneceram estáveis em relação ao mesmo período.
-                        </p>
-                        <p class="font-weight-bold fs-4">Desse modo, o panorama do Brasil se mantém em queda pelo segundo dia consecutivo após 44 dias com recordes de infecções. Com 140.234 novos casos, o número médio de brasileiros infectados chegou a 136.067, uma diminuição de 27% em relação há 14 dias.
-                        </p>
-                        <p class="font-weight-bold fs-4">A análise da situação pandêmica é feita a partir da variação de 15% fixada por infectologistas como ponto de inflexão. Dessa maneira, se um índice registrar um aumento superior a 15% em relação há duas semanas, ele está em alta; se o índice cair mais de 15% em relação ao mesmo período, ele está em queda. Médias que permanecem entre -15% e 15% são definidas como estáveis.
+                        <p class="font-weight-bold fs-4">{{}}</p>
                         <p class="font-weight-bold fs-4 my-5"> Compartilhar
                             <a href="#"><img src="../img/share.svg" height="30" width="30" class="m-left"></a>
                         </p>
