--- a/templates/Noticias/news-4.html
+++ b/templates/Noticias/news-4.html
@@ -35,8 +35,8 @@
                 <div class="conteúdo d-flex flex-column">
                     <h1>Covid-19: Brasil tem a maior média móvel de mortes em seis meses</h1>
                     <div >
-                        <img class=" w-100" src="../img/covid-news-4.jpg" alt="" srcset="">
-                        <p class="font-weight-bold fs-4">{{}}</p>
+                        <img class=" w-100" src="" alt="" srcset="">
+                        <p class="font-weight-bold fs-4">{{pagina2.get_conteudo()}}</p>
                         <p class="font-weight-bold fs-4 my-5"> Compartilhar
                             <a href="#"><img src="../img/share.svg" height="30" width="30" class="m-left"></a>
                         </p>
