--- a/templates/Noticias/news-8.html
+++ b/templates/Noticias/news-8.html
@@ -36,14 +36,14 @@
                     <h1>Queiroga pede para que pais levem seus filhos para vacinar contra covid-19</h1>
                     <div >
                         <img class=" w-100" src="../img/covid-news-8.jpg" alt="" srcset="">
-                        <p class="font-weight-bold fs-4">Ao participar de um ato de vacinação infantil contra a covid-19 em Maceió (AL), neste sábado (12/2), o ministro da Saúde, Marcelo Queiroga, pediu aos pais e responsáveis que levem suas crianças de 5 a 11 anos para tomar o imunizante. Com um ritmo de vacinação do público infantil considerado lento por especialistas, apenas 3,4 milhões de crianças receberam a primeira dose do imunizante.</p>
-                        <p class="font-weight-bold fs-4">“Vamos disponibilizar as vacinas para os pais e eu exorto a cada pai e cada mãe que levem seus filhos para a sala de vacinação”, disse o ministro, que vacinou duas crianças no evento.
+                        <p class="font-weight-bold fs-4"></p>
+                        <p class="font-weight-bold fs-4">
                         </p>
-                        <p class="font-weight-bold fs-4">Ainda que Queiroga tenha defendido a não obrigatoriedade da vacinação de crianças de 5 a 11 anos, o pedido feito aos pais vai na contramão do que defende o presidente da República, Jair Bolsonaro, que afirmou que não irá vacinar a filha Laura de 11 anos. 
+                        <p class="font-weight-bold fs-4"> 
                         </p>
-                        <p class="font-weight-bold fs-4">Nesta sexta (11), o Ministério da Saúde anunciou a contratação de mais 2 milhões de doses da vacina pediátrica da Pfizer, que já é aplicada no país nos grupos de faixa etária de 5 a 11 anos. Com a adição das unidades, a pasta já adquiriu 22 milhões de imunizantes da Pfizer destinados ao público pediátrico.
+                        <p class="font-weight-bold fs-4">
                         </p>
-                        <p class="font-weight-bold fs-4">Queiroga garantiu que até a próxima terça-feira, 15 de fevereiro, o ministério distribuirá vacinas suficientes para aplicar a primeira dose em todas as crianças de 5 a 11 anos do país.
+                        <p class="font-weight-bold fs-4">
                         </p>
                         <p class="font-weight-bold fs-4 my-5"> Compartilhar
                             <a href="#"><img src="../img/share.svg" height="30" width="30" class="m-left"></a>
