--- a/templates/Noticias/news-9.html
+++ b/templates/Noticias/news-9.html
@@ -33,17 +33,17 @@
         <main>
             <div class="main-container w-50 m-auto my-5">
                 <div class="conteúdo d-flex flex-column">
-                    <h1>Estado do Rio volta à bandeira amarela de risco para covid-19 Rio volta à bandeira amarela de risco para covid-19</h1>
+                    <h1></h1>
                     <div >
                         <img class=" w-100" src="../img/covid-news-9.webp" alt="" srcset="">
-                        <p class="font-weight-bold fs-4">O estado do Rio de Janeiro voltou para a bandeira amarela, de baixo risco para covid-19. Segundo o Mapa de Risco da Covid-19, divulgado nesta sexta-feira (11) pela Secretaria de Estado de Saúde (SES), apresentam melhora as regiões Metropolitana I, que saiu da bandeira laranja (risco moderado) para bandeira amarela (baixo risco) e Serrana, que estava em bandeira vermelha (risco alto) e agora aparece em bandeira laranja (risco moderado)</p>
-                        <p class="font-weight-bold fs-4">As regiões Metropolitana II, Baixada Litorânea e Baía da Ilha Grande permaneceram com bandeira amarela (risco baixo). As regiões Médio Paraíba, Centro Sul e Norte continuam em bandeira laranja (risco moderado). Apenas a região noroeste se mantém em bandeira vermelha (risco alto)
+                        <p class="font-weight-bold fs-4"></p>
+                        <p class="font-weight-bold fs-4">
                         </p>
-                        <p class="font-weight-bold fs-4">No período analisado, as internações pela doença tiveram queda de 71,34%, saindo de 1.267, na Semana Epidemiológica 3, para 363, na Semana 5. Já os óbitos caíram 30,21%, saindo de 321, na Semana 3, para 224, na Semana 5
+                        <p class="font-weight-bold fs-4">
                         </p>
-                        <p class="font-weight-bold fs-4">Os indicadores mostram que, no período de 1º a 8 de fevereiro, a taxa de positividade para SARS-CoV-2 em testes RT-PCR realizados em unidades de saúde de todo o estado foi de 50%. Nesta quinta-feira (10), a taxa de ocupação de leitos para covid-19 estava em 55% em unidades de terapia intensiva (UTI) e 41% enfermaria
+                        <p class="font-weight-bold fs-4">
                         </p>
-                        <p class="font-weight-bold fs-4">"Esta edição do mapa de risco consolida ainda mais a queda dos indicadores da covid-19, mostrando que a Ômicron já atingiu o pico e agora está em queda sustentável na maior parte das regiões do estado. Nas regiões Norte e Noroeste, ainda estamos com o alerta ligado", ressaltou o secretário estadual de Saúde, Alexandre Chieppe
+                        <p class="font-weight-bold fs-4">
                         </p>
                         <p class="font-weight-bold fs-4 my-5"> Compartilhar
                             <a href="#"><img src="../img/share.svg" height="30" width="30" class="m-left"></a>
