--- a/templates/Recentes.html
+++ b/templates/Recentes.html
@@ -33,10 +33,10 @@
     <main>
         <div class="main-container w-50 m-auto my-5">
             <div class="conteúdo d-flex flex-column">
-                <h1>{{pagina.get_titulo()}}</h1>
+                <h1>{{recentes.get_titulo()}}</h1>
                 <div>
-                    <img class=" w-100" src="{{pagina.get_imagem()}}" alt="" srcset="">
-                    <p class="font-weight-bold fs-4">{{pagina.get_conteudo()}}</p>
+                    <img class=" w-100" src="{{recentes.get_imagem()}}" alt="" srcset="">
+                    <p class="font-weight-bold fs-4">{{recentes.get_conteudo()}}</p>
                     <p class="font-weight-bold fs-4 my-5"> Compartilhar
                         <a href="#"><img src="/static/img/share.svg" height="30" width="30" class="m-left"></a>
                     </p>
