--- a/templates/index.html
+++ b/templates/index.html
@@ -29,63 +29,56 @@
                 <a class="nav-link text-white fs-5" href="#Reportagens">Reportagens</a>
             </nav>
           </div>
+          <div class="Estados">
+            <div>
+              <a href="">RJ</a>
+            </div>
+          </div>
         </div>
       </header>
       <main>
         <!--Carousel-->
-        <div id="carouselExampleControls" class="carousel slide w-50 m-auto my-5" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                
+        <div id="carouselExampleIndicators" class="carousel slide w-50 m-auto my-5" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="carousel-img d-block w-100" src="../static/img/covid-news-7.png" alt="Third slide">
+              <div class="carousel-caption d-none d-md-block">
+                <a href="./Notícias/7" class="carousel-ancor">
+                  <h5>Zé Gotinha responde às dúvidas da população sobre a vacinação de crianças contra a Covid-19</h5>
+                </a>
               </div>
-              <div class="carousel-item">
-                
-              </div>
-              <div class="carousel-item">
-                
             </div>
-            </div>
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <div class="carousel-item">
+              <img class="carousel-img d-block w-100" src="../static/img/covid-news-8.jpg" alt="Second slide">
+              <div class="carousel-caption d-none d-md-block td-none">
+                <a href="./Notícias/8" class="carousel-ancor">
+                  <h5>Queiroga pede para que pais levem seus filhos para vacinar contra covid-19</h5>
+                </a>
               </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="carousel-img d-block w-100" src="../static/img/covid-news-7.png" alt="Third slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <a href="./Notícias/7" class="carousel-ancor">
-                      <h5>Zé Gotinha responde às dúvidas da população sobre a vacinação de crianças contra a Covid-19</h5>
-                    </a>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img class="carousel-img d-block w-100" src="../static/img/covid-news-8.jpg" alt="Second slide">
-                  <div class="carousel-caption d-none d-md-block td-none">
-                    <a href="./Notícias/8" class="carousel-ancor">
-                      <h5>Queiroga pede para que pais levem seus filhos para vacinar contra covid-19</h5>
-                    </a>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img class="carousel-img d-block w-100" src="../static/img/covid-news-9.webp" alt="First slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <a href="./Notícias/9" class="carousel-ancor">
-                        <h5>Estado do Rio volta à bandeira amarela de risco para covid-19 Rio volta à bandeira amarela de risco para covid-19</h5>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
             </div>
+            <div class="carousel-item">
+              <img class="carousel-img d-block w-100" src="../static/img/covid-news-9.webp" alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <a href="./Notícias/9" class="carousel-ancor">
+                    <h5>Estado do Rio volta à bandeira amarela de risco para covid-19 Rio volta à bandeira amarela de risco para covid-19</h5>
+                </a>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Anterior</span>
