--- a/templates/Noticia_estado.html
+++ b/templates/Noticia_estado.html
@@ -47,8 +47,8 @@
       <div class="offcanvas-body">
         {% for estado in paginas_3 %}
         <div class="dropdown mt-3">
-          <img style="width: 25px" src="{{estado.get_bandeira()}}">
-          <a href="{{url_for('Estados',id=estado.get_id())}}"> 
+          <a href="url_for('estado',id=estado.get_id())"> 
+            <img style="width: 25px" src="{{estado.get_bandeira()}}">
             <button class="btn btn-primary" type="button" id="dropdownMenuButton"
               data-bs-toggle="dropdown">
               {{estado.get_titulo()}}
@@ -60,56 +60,6 @@
     </div>
   </header>
   <main style="margin-top: 195px">
-    <!--Carousel-->
-    <div id="carouselExampleIndicators" class="carousel slide w-50 m-auto my-5" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="carousel-img d-block w-100" src="../static/img/covid-news-7.png" alt="Third slide">
-          <div class="carousel-caption d-none d-md-block">
-            <a href="./Notícias/7" class="carousel-ancor">
-              <h5>Zé Gotinha responde às dúvidas da população sobre a vacinação de crianças contra a Covid-19</h5>
-            </a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="carousel-img d-block w-100" src="../static/img/covid-news-8.jpg" alt="Second slide">
-          <div class="carousel-caption d-none d-md-block td-none">
-            <a href="./Notícias/8" class="carousel-ancor">
-              <h5>Queiroga pede para que pais levem seus filhos para vacinar contra covid-19</h5>
-            </a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="carousel-img d-block w-100" src="../static/img/covid-news-9.webp" alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
-            <a href="./Notícias/9" class="carousel-ancor">
-              <h5>Estado do Rio volta à bandeira amarela de risco para covid-19 Rio volta à bandeira amarela de risco
-                para covid-19</h5>
-            </a>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-      </a>
-    </div>
-    </div>
     <!--Cards-->
     <div id="Principais" class="d-grid text-center mx-auto my-5">
       <h2 class="titulo my-5 ms-5">Principais</h2>
