--- a/templates/index.html
+++ b/templates/index.html
@@ -48,11 +48,8 @@
         {% for estado in paginas_3 %}
         <div class="dropdown mt-3">
           <img style="width: 25px" src="{{estado.get_bandeira()}}">
-          <a href="{{url_for('Estados',id=estado.get_id())}}"> 
-            <button class="btn btn-primary" type="button" id="dropdownMenuButton"
-              data-bs-toggle="dropdown">
-              {{estado.get_titulo()}}
-            </button>
+          <a href="{{url_for('Estados',id=estado.get_id())}}" style="text-decoration: none;">   
+            {{estado.get_titulo()}}
           </a>
         </div>
         {% endfor %}
@@ -70,27 +67,27 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
           aria-label="Slide 3"></button>
       </div>
-      <div class="carousel-inner">
+      <div class="carousel-inner d-block w-100">
         <div class="carousel-item active">
-          <img class="carousel-img d-block w-100" src="../static/img/covid-news-7.png" alt="Third slide">
+          <img class=" d-block w-100" src="../static/img/covid-news-7.png" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
-            <a href="./Notícias/7" class="carousel-ancor">
+            <a href="/manutencao/" class="carousel-ancor">
               <h5>Zé Gotinha responde às dúvidas da população sobre a vacinação de crianças contra a Covid-19</h5>
             </a>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="carousel-img d-block w-100" src="../static/img/covid-news-8.jpg" alt="Second slide">
+          <img class=" d-block w-100" src="../static/img/covid-news-8.jpg" alt="Second slide">
           <div class="carousel-caption d-none d-md-block td-none">
-            <a href="./Notícias/8" class="carousel-ancor">
+            <a href="/manutencao/" class="carousel-ancor">
               <h5>Queiroga pede para que pais levem seus filhos para vacinar contra covid-19</h5>
             </a>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="carousel-img d-block w-100" src="../static/img/covid-news-9.webp" alt="First slide">
+          <img class="d-block w-100" src="../static/img/covid-news-9.webp" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
-            <a href="./Notícias/9" class="carousel-ancor">
+            <a href="/manutencao/" class="carousel-ancor">
               <h5>Estado do Rio volta à bandeira amarela de risco para covid-19 Rio volta à bandeira amarela de risco
                 para covid-19</h5>
             </a>
@@ -108,7 +105,6 @@
         <span class="visually-hidden">Next</span>
       </button>
       </a>
-    </div>
     </div>
     <!--Cards-->
     <div id="Principais" class="d-grid text-center mx-auto my-5">
